# superwrites

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml
superwrites/: __init__.py  tui_app.py
superwrites/core/: __init__.py  ai_client.py  config_manager.py  exporter.py  novel_engine.py
superwrites/widgets/: __init__.py  input_bar.py  log_panel.py  preview_panel.py  sidebar.py
tests/: test_e2e.py
