[project]
name = "superwrites"
version = "0.2.0"
description = "TUI 网文小说生成器（基于 Textual）"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["tui", "novel", "ai", "writing", "textual", "ollama"]
authors = [
    { name = "SuperWrites Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "textual>=8.1.1",
    "rich>=14.3.2",
    "httpx>=0.28.1",
    "ebooklib>=0.20",
    "markdown-it-py>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/yourname/superwrites"
Issues = "https://github.com/yourname/superwrites/issues"

[project.scripts]
superwrites = "superwrites.tui_app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["superwrites*"]
exclude = ["tests*"]
